Update InventoryPage.java